# muMatch

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  main.py  parameters.yml  run_pipeline.py  scalar_plotting.ipynb  setup.cfg  setup.py
correspondence/: match.py
correspondence/deep_functional_maps/: data_loading.py  operations.py  predictor.py  training.py
correspondence/functional_maps/: functional_mapping.py  spectoral_filtering.py  zoom_out.py
correspondence/product_manifold_filters/: product_manifold_filter.py
example_data/aligned_point_clouds/: example.npz
example_data/match_results/: 1_2.npy
example_data/processed_data/: config.json
example_data/processed_data/eigen/: 1.npz  2.npz
example_data/processed_data/meshes/: 1.ply  2.ply
example_data/processed_data/signatures/: 1.npy  2.npy
example_data/raw/: 2.ply  Q02.ply  Q03.ply
meshcorr/deep_functional_maps/: data_loading.py  operations.py  predictor.py  training.py
meshcorr/functional_maps/: feature_descriptors.py  functional_mapping.py  functional_mapping_prototype.py  shot_descriptor.py  zoom_out.py
meshcorr/product_manifold_filters/: assignment_functors.py  degenerate_assignment_problem.py  product_manifold_filter.py
meshcorr/tools/: geometric_utilities.py  mesh_class.py  spectoral_filtering.py  visualise_interactive.py
micro_match/: pipeline.py  run_pipeline.py
micro_match/correspondence/: match.py
micro_match/correspondence/functional_maps/: functional_mapping.py  zoom_out.py  (+1 more)
micro_match/preprocessing/: feature_descriptors.py  manual_partition.py  preprocess.py  shot_descriptor.py
micro_match/shape_analysis/: shape_alignment.py  statistical_shape_analysis.py
micro_match/tools/: geometric_utilities.py  mapping_viewer.py  mesh_class.py  visu_vedo.py
preprocessing/: feature_descriptors.py  manual_partition.py  preprocess.py
preprocessing/deep_functional_maps/: data_loading.py  operations.py  optimise_signatures.py  prediction.py  training.py
scripts/: mapping_viewer.py  visualise_interactive.py
shape_analysis/: shape_alignment.py  statistical_shape_analysis.py
tests/: test_imports.py
tools/: geometric_utilities.py  mesh_class.py  visu_vedo.py
(+29 files in other folders)
