[metadata]
name = microMatch
version = 1.0
author = James Klatzow, Virginie Uhlmann
author_email = uhlmann@ebi.ac.uk
url = https://github.com/uhlmanngroup/muMatch
license = BSD-3-Clause
description = 3D shape correspondence
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    License :: OSI Approved :: BSD License

project_urls =
    Bug Tracker = https://github.com/uhlmanngroup/muMatch/issues
    Documentation = https://github.com/uhlmanngroup/muMatch#README.md
    Source Code = https://github.com/uhlmanngroup/muMatch
    User Support = https://github.com/uhlmanngroup/muMatch/issues

[options]
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
# TODO: add package requirements here
install_requires =
    numpy
    yaml
    matplotlib
    vedo
    pymeshfix
    scikit-learn
    jax
    networkx[default]
    joblib
    ortools


[options.extras_require]
dev =
    pre-commit
    black
    flake8
    check-manifest>=0.42
    pytest


[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
# E741 ambiguous variable name 'l'
# E731 do not assign a lambda expression, use a def
ignore = E203,W503,E501,C901,E741,E731
max-line-length = 79
max-complexity = 18
exclude = vendored|__init__.py|examples|setup.py
